# clients

./: package-lock.json  package.json
.github/workflows/: build-browser.yml  build-desktop.yml  build-web.yml  chromatic.yml  release-desktop-beta.yml  test.yml
apps/browser/src/_locales/az/: messages.json
apps/browser/src/_locales/ko/: messages.json
apps/cli/: package.json
apps/desktop/desktop_native/core/: Cargo.toml
apps/desktop/desktop_native/napi/: Cargo.toml
apps/desktop/desktop_native/objc/: Cargo.toml
apps/desktop/desktop_native/proxy/: Cargo.toml
apps/desktop/desktop_native/proxy/src/: main.rs  windows.rs
apps/desktop/src/: package-lock.json
apps/desktop/src/locales/af/: messages.json
apps/desktop/src/locales/ar/: messages.json
apps/desktop/src/locales/az/: messages.json
apps/desktop/src/locales/be/: messages.json
apps/desktop/src/locales/bg/: messages.json
apps/desktop/src/locales/bn/: messages.json
apps/desktop/src/locales/bs/: messages.json
apps/desktop/src/locales/ca/: messages.json
apps/desktop/src/locales/cs/: messages.json
apps/desktop/src/locales/cy/: messages.json
apps/desktop/src/locales/da/: messages.json
apps/desktop/src/locales/de/: messages.json
apps/desktop/src/locales/el/: messages.json
apps/desktop/src/locales/en_GB/: messages.json
apps/desktop/src/locales/en_IN/: messages.json
apps/desktop/src/locales/eo/: messages.json
apps/desktop/src/locales/es/: messages.json
apps/desktop/src/locales/et/: messages.json
apps/desktop/src/locales/eu/: messages.json
apps/web/src/locales/af/: messages.json
(+107 files in other folders)
