[package]
edition = "2021"
exclude = ["index.node"]
license = "GPL-3.0"
name = "desktop_proxy"
version = "0.0.0"
publish = false

[dependencies]
anyhow = "=1.0.94"
desktop_core = { path = "../core", default-features = false }
futures = "=0.3.31"
log = "=0.4.22"
simplelog = "=0.12.2"
tokio = { version = "=1.41.1", features = ["io-std", "io-util", "macros", "rt"] }
tokio-util = { version = "=0.7.12", features = ["codec"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "=0.58.0", features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]}

[target.'cfg(target_os = "macos")'.dependencies]
embed_plist = "=1.2.2"
